--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,8 +13,8 @@
   <section class="cover">
     <div class="inside">
       <div class="description">
-        <h1>Second International Workshop on Multisensory Data & Knowledge</h1>
-        <h2>Workshop at <a href="https://www2023.thewebconf.org/" rel="external" target="_blank">TheWebConf 2023</a></h2>
+        <h1>Neuro-symbolic AI for Agent and Multi-Agent systems [NeSyMAS] Workshop</h1>
+        <h2>Workshop at <a href="https://aamas2023.soton.ac.uk" rel="external" target="_blank">AAMAS 2023</a></h2>
       </div>
     </div>
     <nav class="mainNav">
@@ -37,27 +37,6 @@
   <footer id="appFooter">
     <div class="footerCont">
       <div class="projLogoCont">
-        <a href="https://www2023.thewebconf.org/" rel="external" target="_blank">
-          <img alt="The 2023 ACM Web Conference" src="img/www-logo.svg">
-        </a>
-        <a href="http://www.eurecom.fr/en" rel="external" target="_blank">
-          <img alt="EURECOM" src="img/eurecom.gif">
-        </a>
-        <a href="https://www.fbk.eu/en/" rel="external" target="_blank">
-          <img alt="Fondazione Bruno Kessler" src="img/fbk.jpg">
-        </a>
-        <a href="https://www.kcl.ac.uk/" rel="external" target="_blank">
-          <img alt="King's College London" src="img/kcl.svg">
-        </a>
-        <a href="https://huc.knaw.nl/" rel="external" target="_blank">
-          <img alt="KNAW Humanities Cluster" src="img/knaw.jpg">
-        </a>
-        <a href="http://kmi.open.ac.uk/" rel="external" target="_blank">
-          <img alt="Open University" src="img/kmi.png">
-        </a>
-        <a href="https://www.unibo.it/en" rel="external" target="_blank">
-          <img alt="University of Bologna" src="img/uni-bologna.png">
-        </a>
       </div>
 	  
     </div>
