--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>{{page.title}} | MDK 2023</title>
+  <title>{{page.title}} | NeSyMAS 2023</title>
   <link rel="stylesheet" href="styles.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +21,7 @@
       <ul>
         {% assign navigation_pages = site.html_pages | sort: 'navigation_weight' %} {% for p in navigation_pages %} {% if p.navigation_weight %}
         <li>
-          <a href="/mdk23{{ p.url }}" {% if p.url==page.url %}class="active" {% endif %}>
+          <a href="/nesymas23{{ p.url }}" {% if p.url==page.url %}class="active" {% endif %}>
             {{ p.title }}
           </a>
         </li>
