--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,8 +13,8 @@
   <section class="cover">
     <div class="inside">
       <div class="description">
-        <h1 style="color: white;">Neuro-symbolic AI for Agent and Multi-Agent systems [NeSyMAS] Workshop</h1>
-        <h2 style="color: white;">Workshop at <a href="https://aamas2023.soton.ac.uk" rel="external" target="_blank">AAMAS 2023</a></h2>
+        <h1 style="color: white; text-shadow: 1px 1px #000;">Neuro-symbolic AI for Agent and Multi-Agent systems [NeSyMAS] Workshop</h1>
+        <h2 style="color: white; text-shadow: 1px 1px #000;">Workshop at <a sytle="color: white;" href="https://aamas2023.soton.ac.uk" rel="external" target="_blank">AAMAS 2023</a></h2>
       </div>
     </div>
     <nav class="mainNav">
